--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     </string>
 
 
-    <string name="app_name">友盟社会化</string>
+    <string name="app_name">辅助医疗</string>
     <string name="action_settings">设置</string>
     <string name="actionbar_activity_not_found">Failed to open intent...</string>
     <string name="share_by_weixin">微信分享</string>
